fix zero state overflow in very small screens (#584)

--- a/app/[[...category]]/NoCategoryZeroState/noCategoryZeroState.scss
+++ b/app/[[...category]]/NoCategoryZeroState/noCategoryZeroState.scss
@@ -1,4 +1,7 @@
 .welcome-message-container {
+	position: relative;
+	height: 100%;
+
 	.logo {
 		position: absolute;
 		top: 50%;
